Move files from other repo

--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "license": "MIT",
   "dependencies": {
     "aframe": "^1.0.4",
-    "aframe-react": "^4.4.0"
+    "aframe-react": "^4.4.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9"
   }
 }
