--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "virtual-resort-preview",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "Karol Moroz <k.j.moroz@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc -p ."
+  },
   "dependencies": {
     "aframe": "^1.0.4",
     "aframe-react": "^4.4.0",
@@ -12,6 +16,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9"
+    "@types/react-dom": "^16.9.9",
+    "typescript": "^4.0.5"
   }
 }
